# neis-client

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/client/: mod.rs  response.rs
src/types/: academy_info.rs  class_info.rs  class_room_info.rs  els_timetable.rs  his_timetable.rs  meal_service.rs  mis_timetable.rs  mod.rs  school_aflco_info.rs  school_info.rs  school_major_info.rs  school_schedule.rs  sps_timetable.rs
