[package]
name = "neis-client"
version = "1.0.0"
edition = "2021"
description = "나이스 교육정보 개방 포털 API client"
readme = "README.md"
homepage = "https://github.com/rubymix/neis-client"
repository = "https://github.com/rubymix/neis-client"
license-file = "LICENSE"

[dependencies]
form_urlencoded = "1.2"
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
