[package]
name = "neis-client"
version = "1.1.1"
edition = "2024"
description = "나이스 교육정보 개방 포털 API client"
readme = "README.md"
homepage = "https://github.com/rubymix/neis-client"
repository = "https://github.com/rubymix/neis-client"
license-file = "LICENSE"

[dependencies]
form_urlencoded = "1.2"
http-body-util = "0.1"
hyper = { version = "1" }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
